# coreStack-backend

./: Dockerfile  gen_jamui2.py  run_lulc_only.py  scratch_admin_boundary_prereq.py
.claude/: settings.local.json
village_lulc_analytics_ocaml/: LINE_BY_LINE_MIGRATION.md  MIGRATION_GUIDE.md  README.md  build.sh  dune-project  village_lulc_analytics_ocaml.opam
village_lulc_analytics_ocaml/_build/: .db  .digest-db  trace.csexp  trace.csexp.old
village_lulc_analytics_ocaml/_build/default/: village_lulc_analytics_ocaml.dune-package  village_lulc_analytics_ocaml.install
village_lulc_analytics_ocaml/_build/default/.dune/: configurator  configurator.v2
village_lulc_analytics_ocaml/_build/default/lib/: change_detection_vector.ml  village_lulc_analytics_lib.cma  village_lulc_analytics_lib.cmxa  village_lulc_analytics_lib.cmxs  village_lulc_analytics_lib__.ml-gen
village_lulc_analytics_ocaml/_build/default/lib/.merlin-conf/: lib-village_lulc_analytics_lib
village_lulc_analytics_ocaml/_build/default/lib/.village_lulc_analytics_lib.objs/: village_lulc_analytics_lib.impl.all-deps  village_lulc_analytics_lib.impl.d  village_lulc_analytics_lib__Change_detection.impl.d  village_lulc_analytics_lib__Change_detection_vector.impl.all-deps  village_lulc_analytics_lib__Change_detection_vector.impl.d  village_lulc_analytics_lib__Raster.impl.d  (+1 more)
village_lulc_analytics_ocaml/_build/default/test/: test_scaffold.ml
village_lulc_analytics_ocaml/lib/: change_detection.ml  dune  raster.ml  tiff_reader.ml  village_lulc_analytics_lib.ml
village_lulc_analytics_ocaml/test/: dune
(+125 files in other folders)
